:bug: Terminal letter spacing
Terminal was being given letter spacing styling from the atom style
sheet. Set letter-spacing to override the styles passed on from the
atom-bottom-panel selector.

--- a/styles/terminal-plus.less
+++ b/styles/terminal-plus.less
@@ -53,8 +53,10 @@
         height: auto;
         width: 100%;
         position: relative;
+        letter-spacing: normal;
         > div {
           white-space: pre;
+          font-size: inherit;
           > span {
             display: inline-block;
             line-height: inherit;
